@@ -325,8 +325,18 @@ struct machine_ops mb_mops[] = {
     /* .evdev_identify = evdev_is_wellspring5a, */
   },
 
-  { /* MacBookPro10,1 (15" Retina, Mid 2012) */
+  { /* MacBookPro10,1 (15" Retina, Mid 2012)
+     * MacBookPro10,2 (13" Retina Early/Late 2013)
+     */
     .type = MACHINE_MACBOOKPRO_10,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
+    /* .evdev_identify = evdev_is_wellspring7a / evdev_is_wellspring7, */
+  },
+
+  { /* MacBookPro11,3 (15" Retina, Late 2013) */
+    .type = MACHINE_MACBOOKPRO_11,
     .lcd_backlight_probe = mbp_sysfs_backlight_probe,
     .lcd_backlight_step = sysfs_backlight_step,
     .lcd_backlight_toggle = sysfs_backlight_toggle,
@@ -415,6 +425,14 @@ struct machine_ops mb_mops[] = {
     .lcd_backlight_step = sysfs_backlight_step,
     .lcd_backlight_toggle = sysfs_backlight_toggle,
     /* .evdev_identify = evdev_is_wellspring4a / evdev_is_wellspring4, */
+  },
+
+  {  /* MacbookAir6,2 (13" Mid 2013) */
+    .type = MACHINE_MACBOOKAIR_6,
+    .lcd_backlight_probe = mbp_sysfs_backlight_probe,
+    .lcd_backlight_step = sysfs_backlight_step,
+    .lcd_backlight_toggle = sysfs_backlight_toggle,
+    /* .evdev_identify = evdev_is_wellspring8, */
   }
 };
 #endif /* __powerpc__ */
@@ -778,9 +796,15 @@ check_machine_dmi(void)
   else if ((strcmp(buf, "MacBookPro9,1") == 0)
      || (strcmp(buf, "MacBookPro9,2") == 0))
     ret = MACHINE_MACBOOKPRO_9;
-  /* Macbook Pro 15" Retina (Mid 2012) */
-  else if ((strcmp(buf, "MacBookPro10,1") == 0))
+  /* Macbook Pro 15" Retina (Mid 2012)
+   * Macbook Pro 13" Retina (Early/Late 2013)
+   */
+  else if ((strcmp(buf, "MacBookPro10,1") == 0)
+     || (strcmp(buf, "MacBookPro10,2") == 0))
     ret = MACHINE_MACBOOKPRO_10;
+  /* Macbook Pro 15" Retina (Late 2013) */
+  else if ((strcmp(buf, "MacBookPro11,3") == 0))
+    ret = MACHINE_MACBOOKPRO_11;
   /* Core Duo MacBook (May 2006) */
   else if (strcmp(buf, "MacBook1,1") == 0)
     ret = MACHINE_MACBOOK_1;
@@ -811,6 +835,9 @@ check_machine_dmi(void)
   /* MacBook Air 11" & 13" (October 2010) */
   else if ((strcmp(buf, "MacBookAir3,1") == 0) || (strcmp(buf, "MacBookAir3,2") == 0))
     ret = MACHINE_MACBOOKAIR_3;
+  /* MacBook Air 13" (Mid 2013) */
+  else if (strcmp(buf, "MacBookAir6,2") == 0)
+    ret = MACHINE_MACBOOKAIR_6;
   else
     logmsg(LOG_ERR, "Unknown Apple machine: %s", buf);
 
