@@ -40,6 +40,7 @@ typedef enum
     MACHINE_MACBOOKPRO_8,
     MACHINE_MACBOOKPRO_9,
     MACHINE_MACBOOKPRO_10,
+    MACHINE_MACBOOKPRO_11,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
@@ -52,6 +53,7 @@ typedef enum
     MACHINE_MACBOOKAIR_1,
     MACHINE_MACBOOKAIR_2,
     MACHINE_MACBOOKAIR_3,
+    MACHINE_MACBOOKAIR_6,
 #else
     MACHINE_POWERBOOK_32,
     MACHINE_POWERBOOK_33,
